--- a/redis-compose.yml
+++ b/redis-compose.yml
@@ -5,7 +5,15 @@ services:
     restart: always
     ports:
       - "6379:6379"
-    command: ["redis-server", "--requirepass", "yourpassword"]
+    command:
+      [
+        "redis-server",
+        # "--requirepass", "yourpassword",
+        "--appendonly", "yes",
+        "--save", "900", "1",
+        "--save", "300", "10",
+        "--save", "60", "10000"
+      ]
     volumes:
       - redis-data:/data
 
